--- a/assets/css/randomgrump.css
+++ b/assets/css/randomgrump.css
@@ -163,7 +163,7 @@ div#sort {
 .outer-container {
     background-color: #fff;
     padding: 0 10px 30px;
-    box-shadow: 0px 0px 19px 1px #111;
+    box-shadow: 0px 0px 19px 1px #333;
 }
 
 @media (max-width: 1000px) {
@@ -211,7 +211,7 @@ div#sort {
 }
 
 @media (min-width: 1200px) {
-    .outer-continaer, .container {
+    .outer-container, .container {
         width: 1066px;
     }
 }        
@@ -252,6 +252,10 @@ header{
     background-color: #333;
     overflow: hidden;
     width: 100%;
+    margin: 0;
+    padding: 0;
+    border: none;
+    box-shadow: none;
 }
 
 #header-nav ul {
@@ -321,17 +325,86 @@ footer p {
 
 #paypal {
     display: inline;
-    opacity: 0.5;
     float: right;
     margin-right: 20px;
-    transition: opacity 1s;
+    background-color: #333;
 }
 
-#paypal:hover {
+#paypal>#donate-img {
+    display: inline;
+    vertical-align: middle;
+    background-color: #333;
+    opacity: 0.5;
+    transition: opacity 0.8s;
+}
+
+#paypal>#donate-img:hover {
     opacity: 1.0;
 }
 
-#paypal input[type="image"] {
-    display: inline;
-    vertical-align: middle;
+.navbar-toggle {
+    display: none;
+}
+
+.nav-hide {
+        display: block;
+    }
+
+#about {
+    padding: 2em;
+    line-height: 160%;
+}
+
+@media screen and (max-width: 540px) and (min-width: 320px) {
+    header {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .nav-hide {
+        display: none;
+    }
+    
+    #header-nav {
+        width: initial;
+    }
+    
+    #header-nav ul li {
+        display: flex;
+        margin-right: 0;
+        justify-content: center;
+    }
+    
+    #header-nav ul li > a {
+        padding: 0px 10px;
+    }
+    
+    footer {
+        flex-direction: column-reverse;
+    }
+    
+    footer p {
+        margin: 0;
+        display: block;
+        font-size: 0.9em;
+    }
+    
+    #paypal {
+        margin-right: 0;
+        float: none;
+        display: block;
+    }
+    
+    .navbar-toggle {
+        display: block;
+        position: absolute;
+    }
+    
+    .icon-bar {
+        background-color: #fff;
+    }
+    
+    #about {
+        padding: 1em;
+    }
 }
